--- a/intro.tex
+++ b/intro.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
 
-Many of our daily activities involve changing whole-body posture to a target pose without losing balance. For example, to rise from a chair, we carefully maintain balance while switching from a sitting to a standing pose. There are a large variety of motions of similar kind, such as lean-to-stand and kneel-to-stand. Many strategies have been identified to achieve these tasks in biomechanics studies \cite{schenkman:1990,riley:1991,hughes:1994,hughes:1996}. On one end of the spectrum, people employ stabilization strategy in which very  little momentum is generated and the center of mass (COM) is constantly supported. In this work, we are interested in the other end of the spectrum, called momentum transfer strategy, in which rapid movements are used to maintain balance even when the COM is outside the support polygon. Studying motions employing momentum transfer strategy can have far-reaching impacts in robotics, especially in rehabilitation, exoskeleton and humanoid robots. 
+Many of our daily activities involve changing whole-body posture to a target pose without losing balance. For example, to rise from a chair, we carefully maintain balance while switching from a sitting to a standing pose. There are a large variety of motions of similar kind, such as lean-to-stand and kneel-to-stand. Many strategies have been identified to achieve these tasks in biomechanics studies \cite{schenkman:1990,riley:1991,hughes:1994,hughes:1996}. On one end of the spectrum, people employ stabilization strategy in which very little momentum is generated and the center of mass (COM) is constantly supported. In this work, we are interested in the other end of the spectrum, called momentum transfer strategy, in which rapid movements are used to maintain balance even when the COM is outside the support polygon. Studying motions employing momentum transfer strategy can have far-reaching impacts in robotics, especially in rehabilitation, exoskeleton and humanoid robots. 
 
-Designing robot controllers for these tasks is extremely challenging because achieving these tasks require complex motor skills, delicate balance strategies and rich interactions with the environments. The controllers are often designed manually by highly-specialized engineers through a time-consuming, trial-and-error process. It involves laborious manual tuning and numerous costly robot experiments. In contrast, our system can design robot controllers automatically and requires minimal human intervention. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. Our system consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal controller to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. 
+A robot controller often consists of an open loop reference trajectory and a feedback mechanism. Although careful feedback controls are necessary in the momentum transfer strategy, a trajectory of a purposeful and forceful motion is of great importance. Designing a reference trajectory for these tasks is extremely challenging because achieving these tasks require complex motor skills, delicate balance strategies and rich interactions with the environments. These trajectories are often designed manually by highly-specialized engineers through a time-consuming, trial-and-error process. It involves laborious manual tuning and numerous costly robot experiments. In contrast, our system can design the reference trajectory automatically and requires minimal human intervention. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. Our system consists of three main components, physical simulation, trajectory optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{trajectory optimization} to search for the optimal trajectory for the task in the simulation. However, even though this optimal trajectory works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. 
 
-We use \emph{simulation calibration} to cross the Reality Gap. Simulation calibration is a dynamic system identification method. We want to emphasize that the goal of simulation calibration is to effectively design controllers that works in the real world, instead of finding the ground truth about the hardware parameters. During calibration, we collect real performance data on the robot, and use it to improve our physical model. Unlike traditional system identification, which is a separate step from controller design, our simulation calibration is tightly coupled with the controller optimization. We directly perform the optimal controller that is found in the simulation to collect real data for system identification. In this way, the simulation is calibrated at the vicinity of the current optimal controller. The computation is focused at the important regions of the control space and thus fewer robot experiments are needed. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in controller optimization to improve the quality of the controller. We evaluate our system using four locomotion tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful controllers for all the tasks automatically.
+We use \emph{simulation calibration} to cross the Reality Gap. Simulation calibration is a dynamic system identification method. We want to emphasize that the goal of simulation calibration is to effectively design reference trajectories that works in the real world, instead of finding the ground truth about the hardware parameters. During calibration, we collect real performance data on the robot, and use it to improve our physical model. Unlike traditional system identification, which is a separate step from controller design, our simulation calibration is tightly coupled with the trajectory optimization. We directly track the optimal trajectory that is found in the simulation to collect real data for system identification. In this way, the simulation is calibrated at the vicinity of the current optimal trajectory. The computation is focused at the important regions of the control space and thus fewer robot experiments are needed. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in trajectory optimization to improve the quality of the controller. We evaluate our system using four tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful reference trajectories for all the tasks automatically.
 
-Our main contribution is the complete pipeline that can automatically design robot controllers for a wide range of locomotion tasks. Starting from task specifications, our system can find controllers that operate on the robot, with minimal human intervention. This simulation-driven approach effectively cuts the time and the cost of robot controller design. 
+Our main contribution is the complete pipeline that can automatically design open loop reference trajectories to control a robot to achieve a wide range of tasks. Starting from task specifications, our system can find the trajectories that operate on the robot, with minimal human intervention. This simulation-driven approach effectively cuts the time and the cost of robot controller design. 
